Add an SSR example to supabase docs
This PR adds an example that uses server components, [based on user feedback](https://linear.app/clerk/issue/DOCS-5834/add-an-ssr-example-to-supabase-integration-docs).

--- a/docs/integrations/databases/supabase.mdx
+++ b/docs/integrations/databases/supabase.mdx
@@ -314,14 +314,14 @@ The following steps will show you how to fetch and send content to your Supabase
       const listAddresses = async () => {
         // Fetches all addresses scoped to the user
         // Replace "Addresses" with your table name
-        const { data, error } = await client.from("Posts").select();
+        const { data, error } = await client.from("Addresses").select();
         if (!error) setAddresses(data);
       };
 
       const inputRef = useRef<HTMLInputElement>(null);
       const sendAddress = async () => {
         if (!inputRef.current?.value) return;
-        await client.from("Posts").insert({
+        await client.from("Addresses").insert({
           // Replace content with whatever field you want
           content: inputRef.current?.value,
         });
@@ -338,14 +338,14 @@ The following steps will show you how to fetch and send content to your Supabase
       const listAddresses = async () => {
         // Fetches all addresses scoped to the user
         // Replace "Addresses" with your table name
-        const { data, error } = await client.from("Posts").select();
+        const { data, error } = await client.from("Addresses").select();
         if (!error) setAddresses(data);
       };
 
       const inputRef = useRef<HTMLInputElement>(null);
       const sendAddress = async () => {
         if (!inputRef.current?.value) return;
-        await client.from("Posts").insert({
+        await client.from("Addresses").insert({
           // Replace content with whatever field you want
           content: inputRef.current?.value,
         });
@@ -362,14 +362,14 @@ The following steps will show you how to fetch and send content to your Supabase
       const listAddresses = async () => {
         // Fetches all addresses scoped to the user
         // Replace "Addresses" with your table name
-        const { data, error } = await client.from("Posts").select();
+        const { data, error } = await client.from("Addresses").select();
         if (!error) setAddresses(data);
       };
 
       const inputRef = useRef<HTMLInputElement>(null);
       const sendAddress = async () => {
         if (!inputRef.current?.value) return;
-        await client.from("Posts").insert({
+        await client.from("Addresses").insert({
           // Replace content with whatever field you want
           content: inputRef.current?.value,
         });
@@ -506,14 +506,14 @@ The following steps will show you how to fetch and send content to your Supabase
       const listAddresses = async () => {
         // Fetches all addresses scoped to the user
         // Replace "Addresses" with your table name
-        const { data, error } = await client.from("Posts").select();
+        const { data, error } = await client.from("Addresses").select();
         if (!error) setAddresses(data);
       };
 
       const inputRef = useRef<HTMLInputElement>(null);
       const sendAddress = async () => {
         if (!inputRef.current?.value) return;
-        await client.from("Posts").insert({
+        await client.from("Addresses").insert({
           // Replace content with whatever field you want
           content: inputRef.current?.value,
         });
@@ -590,14 +590,14 @@ The following steps will show you how to fetch and send content to your Supabase
       const listAddresses = async () => {
         // Fetches all addresses scoped to the user
         // Replace "Addresses" with your table name
-        const { data, error } = await client.from("Posts").select();
+        const { data, error } = await client.from("Addresses").select();
         if (!error) setAddresses(data);
       };
 
       const inputRef = useRef<HTMLInputElement>(null);
       const sendAddress = async () => {
         if (!inputRef.current?.value) return;
-        await client.from("Posts").insert({
+        await client.from("Addresses").insert({
           // Replace content with whatever field you want
           content: inputRef.current?.value,
         });
@@ -674,14 +674,14 @@ The following steps will show you how to fetch and send content to your Supabase
       const listAddresses = async () => {
         // Fetches all addresses scoped to the user
         // Replace "Addresses" with your table name
-        const { data, error } = await client.from("Posts").select();
+        const { data, error } = await client.from("Addresses").select();
         if (!error) setAddresses(data);
       };
 
       const inputRef = useRef<HTMLInputElement>(null);
       const sendAddress = async () => {
         if (!inputRef.current?.value) return;
-        await client.from("Posts").insert({
+        await client.from("Addresses").insert({
           // Replace content with whatever field you want
           content: inputRef.current?.value,
         });
@@ -718,6 +718,75 @@ The following steps will show you how to fetch and send content to your Supabase
 
 </Steps>
 
+### Server component example
+
+To fetch Supabase data using Clerk with a server component, use Supabase's [`createServerClient()`](https://supabase.com/docs/guides/auth/server-side/creating-a-client?environment=server-component) method as demonstrated in the example below:
+
+```ts filename="components/supabase.tsx"
+import { auth } from "@clerk/nextjs/server";
+import { CookieOptions, createServerClient } from "@supabase/ssr";
+import { cookies } from "next/headers";
+
+async function createClerkSupabaseClient() {
+  const cookieStore = cookies();
+  const { getToken } = auth();
+
+  const token = await getToken({ template: "supabase" });
+  const authToken = token ? { Authorization: `Bearer ${token}` } : null;
+
+  return createServerClient(
+    process.env.NEXT_PUBLIC_SUPABASE_URL!,
+    process.env.NEXT_PUBLIC_SUPABASE_KEY!,
+    {
+      global: { headers: { "Cache-Control": "no-store", ...authToken } },
+      cookies: {
+        get(name: string) {
+          return cookieStore.get(name)?.value;
+        },
+        set(name: string, value: string, options: CookieOptions) {
+          try {
+            cookieStore.set({ name, value, ...options });
+          } catch (error) {
+            // Handle the error
+          }
+        },
+        remove(name: string, options: CookieOptions) {
+          try {
+            cookieStore.set({ name, value: "", ...options });
+          } catch (error) {
+            // Handle the error
+          }
+        },
+      },
+    }
+  );
+}
+
+export default async function Supabase() {
+  const client = await createClerkSupabaseClient();
+
+  const { data, error } = await client.from("Addresses").select();
+
+  if (error) {
+    return <p>Error: {JSON.stringify(error, null, 2)}</p>;
+  }
+
+  return (
+    <div>
+      <h2>Addresses</h2>
+      {!data ? (
+        <p>No addresses</p>
+      ) : (
+        <ul>
+          {data.map((address: any) => (
+            <li key={address.id}>{address.content}</li>
+          ))}
+        </ul>
+      )}
+    </div>
+  );
+}
+```
 
 ## Next steps
 
