DOCS-5864 add OrganizationList JS methods to references (#792)

--- a/docs/components/organization/organization-list.mdx
+++ b/docs/components/organization/organization-list.mdx
@@ -1,9 +1,9 @@
 ---
-title: <OrganizationList />
-description: The <OrganizationList /> component is used to display organization related memberships, invitations, and suggestions for the user.
+title: <OrganizationList /> component
+description: Clerk's <OrganizationList /> component is used to display organization related memberships, invitations, and suggestions for the user.
 ---
 
-# `<OrganizationList />`
+# `<OrganizationList />` component
 
 <Images
   alt="Organization List Example"
@@ -14,20 +14,20 @@ description: The <OrganizationList /> component is used to display organization 
 
 The `<OrganizationList />` component is used to display organization related memberships, invitations, and suggestions for the user.
 
-## `<OrganizationList />` properties
+## Properties
 
-All props below are optional.
+All props are optional.
 
 | Name | Type | Description |
 | --- | --- | --- |
 | `hidePersonal` | `boolean` | By default, users can switch between organization and their personal account. This option controls whether `<OrganizationList />` will include the user's personal account in the organization list. Setting this to `false` will hide the personal account entry, and users will only be able to switch between organizations. <br />Defaults to `false`. |
 | `skipInvitationScreen` | `boolean` \| `undefined` | Hides the screen for sending invitations after an organization is created. When left undefined Clerk will automatically hide the screen if the number of max allowed members is equal to 1.<br />Defaults to `false`. |
-| `appearance` | <code>[Appearance](/docs/components/customization/overview) \| undefined</code> | Optional object to style your components. Will only affect [Clerk Components][components-ref] and not [Account Portal][ap-ref] pages. |
-| `afterCreateOrganizationUrl` | <code>((org: [Organization][org-ref]) => string)</code> \| `string` | Full URL or path to navigate after creating a new organization. |
-| `afterSelectOrganizationUrl` | <code>((org: [Organization][org-ref]) => string)</code> \| `string` | Full URL or path to navigate after selecting an organization.<br />Defaults to `undefined`. |
-| `afterSelectPersonalUrl` | <code>((org: [Organization][org-ref]) => string)</code> \| `string` | Full URL or path to navigate after selecting the personal account.<br />Defaults to `undefined`. |
+| `appearance` | <code>[Appearance](/docs/components/customization/overview) \| undefined</code> | Optional object to style your components. Will only affect [Clerk Components](/docs/components/overview) and not [Account Portal](/docs/account-portal/overview) pages. |
+| `afterCreateOrganizationUrl` | <code>((org: [Organization][org-ref]) => string)</code> \| `string` | Full URL or path to navigate to after creating a new organization. |
+| `afterSelectOrganizationUrl` | <code>((org: [Organization][org-ref]) => string)</code> \| `string` | Full URL or path to navigate to after selecting an organization.<br />Defaults to `undefined`. |
+| `afterSelectPersonalUrl` | <code>((org: [Organization][org-ref]) => string)</code> \| `string` | Full URL or path to navigate to after selecting the personal account.<br />Defaults to `undefined`. |
 
-## How to use the `<OrganizationList />` component
+## Usage with frameworks
 
 <Tabs type="framework" items={["Next.js", "React", "Remix"]}>
   <Tab>
@@ -95,7 +95,135 @@ All props below are optional.
   </Tab>
 </Tabs>
 
-### Force organizations
+## Usage with JavaScript
+
+The following methods available on an instance of the [`Clerk`](/docs/references/javascript/clerk/clerk) class are used to render and control the `<OrganizationList />` component:
+
+- [`mountOrganizationList()`](#mount-organization-list)
+- [`unmountOrganizationList()`](#unmount-organization-list)
+
+The following examples assume that you have followed the [quickstart](/docs/quickstarts/javascript) in order to add Clerk to your JavaScript application.
+
+## `mountOrganizationList()`
+
+Render the `<OrganizationList />` component to an HTML `<div>` element.
+
+```typescript
+function mountOrganizationList(node: HTMLDivElement, props?: OrganizationListProps): void;
+```
+
+### `mountOrganizationList()` params
+
+| Name | Type | Description |
+| --- | --- | --- |
+| `node` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The `<div>` element used to render in the `<OrganizationList />` component |
+| `props?` | [`OrganizationListProps`](#properties) | The properties to pass to the `<OrganizationList />` component |
+
+### `mountOrganizationList()` usage
+
+<InjectKeys>
+
+<CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
+  ```js filename="main.js" {14}
+  import Clerk from '@clerk/clerk-js';
+
+  // Initialize Clerk with your Clerk publishable key
+  const clerk = new Clerk('{{pub_key}}');
+  await clerk.load();
+
+  document.getElementById("app").innerHTML = `
+    <div id="organization-list"></div>
+  `;
+
+  const orgListDiv =
+    document.getElementById("organization-list");
+
+  clerk.mountOrganizationList(orgListDiv);
+  ```
+
+  ```html filename="index.html" {11}
+  <!-- Add a <div id="organization-list"> element to your HTML -->
+  <div id="organization-list"></div>
+
+  <script>
+    window.addEventListener("load", async function () {
+      await Clerk.load();
+
+      const orgListDiv =
+        document.getElementById('organization-list');
+
+      Clerk.mountOrganizationList(orgListDiv);
+    });
+  </script>
+  ```
+</CodeBlockTabs>
+
+</InjectKeys>
+
+## `unmountOrganizationList()`
+
+Unmount and run cleanup on an existing `<OrganizationList />` component instance.
+
+```typescript
+function unmountOrganizationList(node: HTMLDivElement): void;
+```
+
+### `unmountOrganizationList()` params
+
+| Name | Type | Description |
+| --- | --- | --- |
+| `node` | [`HTMLDivElement`](https://developer.mozilla.org/en-US/docs/Web/API/HTMLDivElement) | The container `<div>` element with a rendered `<OrganizationList />` component instance |
+
+### `unmountOrganizationList()` usage
+
+<InjectKeys>
+
+<CodeBlockTabs type="npm-script" options={['NPM module', '<script>']}>
+  ```js filename="main.js" {18}
+  import Clerk from '@clerk/clerk-js';
+
+  // Initialize Clerk with your Clerk publishable key
+  const clerk = new Clerk('{{pub_key}}');
+  await clerk.load();
+
+  document.getElementById('app').innerHTML = `
+    <div id="organization-list"></div>
+  `
+
+  const orgListDiv =
+    document.getElementById('organization-list');
+
+  clerk.mountOrganizationList(orgListDiv);
+
+  // ...
+
+  clerk.unmountOrganizationList(orgListDiv);
+  ```
+
+  ```html filename="index.html" {15}
+  <!-- Add a <div id="organization-list"> element to your HTML -->
+  <div id="organization-list"></div>
+
+  <script>
+    window.addEventListener("load", async function () {
+      await Clerk.load();
+
+      const orgListDiv =
+        document.getElementById('organization-list');
+
+      Clerk.mountOrganizationList(orgListDiv);
+
+      // ...
+
+      Clerk.unmountOrganizationList(orgListDiv);
+    });
+  </script>
+  ```
+</CodeBlockTabs>
+
+</InjectKeys>
+
+## Force organizations
 
 If you would like to prohibit people from using their personal accounts and force them to be part of an organization, the `hidePersonal` property forces your user to join or create an organization in order to continue. For more information on how to hide Personal Accounts and force organizations, see the [dedicated guide](/docs/guides/force-organizations).
 
@@ -110,10 +238,8 @@ export default function OrganizationListPage() {
 };
 ```
 
-## How to customize the `<OrganizationList />` component
+## Customization
 
 To learn about how to customize Clerk components, see the [customization documentation](/docs/components/customization/overview).
 
 [org-ref]: /docs/references/javascript/organization/organization
-[components-ref]: /docs/components/overview
-[ap-ref]: /docs/account-portal/overview
