--- a/docs/integrations/webhooks/overview.mdx
+++ b/docs/integrations/webhooks/overview.mdx
@@ -171,7 +171,7 @@ You can find a guide on how to use webhooks to sync your data to your database [
 
 ## Protecting your webhooks from abuse
 
-If you'd like to ensure that the api route receiving the webhook can only be hit by your own app, there are a few protections you can put in place.
+To ensure that the api route receiving the webhook can only be hit by your app, there are a few protections you can put in place:
 
 First, each webhook request sent by Svix is [signed](https://www.wikiwand.com/en/Digital_signature), and you can verify the signature to ensure that it was sent by Svix, rather than someone else trying to spam or attack your endpoint. Check out Svix's guide on [how to verify webhooks with the svix libraries](https://docs.svix.com/receiving/verifying-payloads/how) or [how to verify webooks manually](https://docs.svix.com/receiving/verifying-payloads/how-manual) for more information on how to verify the webhook signature.
 
