--- a/docs/integrations/webhooks/overview.mdx
+++ b/docs/integrations/webhooks/overview.mdx
@@ -173,6 +173,6 @@ You can find a guide on how to use webhooks to sync your data to your database [
 
 To ensure that the api route receiving the webhook can only be hit by your app, there are a few protections you can put in place:
 
-First, each webhook request sent by Svix is [signed](https://www.wikiwand.com/en/Digital_signature), and you can verify the signature to ensure that it was sent by Svix, rather than someone else trying to spam or attack your endpoint. Check out Svix's guide on [how to verify webhooks with the svix libraries](https://docs.svix.com/receiving/verifying-payloads/how) or [how to verify webooks manually](https://docs.svix.com/receiving/verifying-payloads/how-manual) for more information on how to verify the webhook signature.
+- **Verify the request signature**: Svix webhook requests are [signed](https://www.wikiwand.com/en/Digital_signature) and can be verified to ensure the request is not malicious. To learn more, check out Svix's guide on [how to verify webhooks with the svix libraries](https://docs.svix.com/receiving/verifying-payloads/how) or [how to verify webooks manually](https://docs.svix.com/receiving/verifying-payloads/how-manual).
 
 If you'd like to take it a step further, you can ensure that your webhook-receiving api route only accepts requests coming from [Svix's webhook IPs](https://docs.svix.com/webhook-ips.json), and reject any request that does not. This can even further short-circuit any attempts from attackers to flood your servers or waste your compute.
