--- a/docs/integrations/webhooks/overview.mdx
+++ b/docs/integrations/webhooks/overview.mdx
@@ -175,4 +175,4 @@ To ensure that the api route receiving the webhook can only be hit by your app, 
 
 - **Verify the request signature**: Svix webhook requests are [signed](https://www.wikiwand.com/en/Digital_signature) and can be verified to ensure the request is not malicious. To learn more, check out Svix's guide on [how to verify webhooks with the svix libraries](https://docs.svix.com/receiving/verifying-payloads/how) or [how to verify webooks manually](https://docs.svix.com/receiving/verifying-payloads/how-manual).
 
-If you'd like to take it a step further, you can ensure that your webhook-receiving api route only accepts requests coming from [Svix's webhook IPs](https://docs.svix.com/webhook-ips.json), and reject any request that does not. This can even further short-circuit any attempts from attackers to flood your servers or waste your compute.
+- **Only accept requests coming from [Svix's webhook IPs](https://docs.svix.com/webhook-ips.json)**:  To further prevent attackers from flooding your servers or wasting your compute, you can ensure that your webhook-receiving api routes only accept requests coming from [Svix's webhook IPs](https://docs.svix.com/webhook-ips.json), rejecting all other requests.
