--- a/docs/integrations/webhooks/overview.mdx
+++ b/docs/integrations/webhooks/overview.mdx
@@ -165,7 +165,14 @@ From the Replay Messages menu, you will have 3 options.
   alt="The Webhooks page of the Clerk Dashboard. The Replay menu, for replaying failling or missing webhook messages, is open and showing three options."
 />
 
-
 ## Sync data to your database
 
 You can find a guide on how to use webhooks to sync your data to your database [here](/docs/integrations/webhooks/sync-data).
+
+## Protecting your webhooks from abuse
+
+To ensure that the api route receiving the webhook can only be hit by your app, there are a few protections you can put in place:
+
+- **Verify the request signature**: Svix webhook requests are [signed](https://www.wikiwand.com/en/Digital_signature) and can be verified to ensure the request is not malicious. To learn more, check out Svix's guide on [how to verify webhooks with the svix libraries](https://docs.svix.com/receiving/verifying-payloads/how) or [how to verify webooks manually](https://docs.svix.com/receiving/verifying-payloads/how-manual).
+
+- **Only accept requests coming from [Svix's webhook IPs](https://docs.svix.com/webhook-ips.json)**:  To further prevent attackers from flooding your servers or wasting your compute, you can ensure that your webhook-receiving api routes only accept requests coming from [Svix's webhook IPs](https://docs.svix.com/webhook-ips.json), rejecting all other requests.
