--- a/docs/components/unstyled/sign-out-button.mdx
+++ b/docs/components/unstyled/sign-out-button.mdx
@@ -11,7 +11,7 @@ The `<SignOutButton>` component is a button that signs a user out. By default, i
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `redirectUrl?` | `string` | Full URL or path to navigate to after signing out. |
+| `signOutCallback?` | `() => (void \| Promise<any>)` | A promise to handle after the sign out has successfully happened. |
 | `signOutOptions?` | [`SignOutOptions`](#sign-out-options) | Options for signing out. Includes `sessionId` which if passed, signs the user out of a specific session. Useful for multi-session applications. |
 | `children?` | `React.ReactNode` | Children you want to wrap the `<SignOutButton>` in. |
 
