--- a/docs/references/javascript/user/password-management.mdx
+++ b/docs/references/javascript/user/password-management.mdx
@@ -11,7 +11,7 @@ The following examples assume that you have followed the [quickstart](/docs/quic
 
 ## `updatePassword()`
 
-Updates the user's password. Note that passwords must be at least 8 characters long.
+Updates the user's password. Passwords must be at least 8 characters long.
 
 ```typescript
 function updatePassword: (params: UpdateUserPasswordParams) => Promise<User>;
