add missing import to webhook doc

--- a/docs/integrations/webhooks/sync-data.mdx
+++ b/docs/integrations/webhooks/sync-data.mdx
@@ -229,6 +229,7 @@ pnpm add svix
   The code example assumes a working Express application. Please adjust as needed for your setup and framework of choice.
 
 ```ts
+import { Webhook } from "svix";
 import bodyParser from "body-parser";
 
 app.post(
