fix rebase mistakes

--- a/docs/references/javascript/external-account.mdx
+++ b/docs/references/javascript/external-account.mdx
@@ -87,3 +87,5 @@ Returns the identifier of the account, which can be one of the following:
 ```typescript
 function accountIdentifier(): string;
 ```
+
+[exacc-ref]: /docs/references/javascript/external-account
