--- a/docs/references/javascript/sign-up/sign-up.mdx
+++ b/docs/references/javascript/sign-up/sign-up.mdx
@@ -80,7 +80,7 @@ function create(params: SignUpCreateParams): Promise<SignUpResource>;
 
 | Type | Description |
 | --- | --- |
-| `Promise<SignUpResource>` | A `Promise` which resolves to the current `SignUp`. |
+| `Promise<SignUpResource>` | A `Promise` which resolves to the current [`SignUp`][signup-ref]. |
 
 ### `update()`
 
@@ -100,9 +100,16 @@ function update(params: SignUpUpdateParams): Promise<SignUpResource>;
 
 | Type | Description |
 | --- | --- |
-| `Promise<SignUpResource>` | This method returns a `Promise` which resolves to the current `SignUp`. |
+| `Promise<SignUpResource>` | This method returns a `Promise` which resolves to the current [`SignUp`][signup-ref]. |
 
 ### `createEmailLinkFlow()`
+
+```typescript
+function createEmailLinkFlow(): {
+  startEmailLinkFlow: (params: StartEmailLinkFlowParams) => Promise<SignUp>;
+  cancelEmailLinkFlow: () => void;
+};
+```
 
 Sets up a sign-up with email link flow. Calling `createEmailLinkFlow()` will return two functions.
 
@@ -112,7 +119,7 @@ The second function can be used to stop polling at any time, allowing for full c
 
 ```typescript
 function createEmailLinkFlow(): {
-  startEmailLinkFlow: (params: StartEmailLinkFlowParams) => Promise<SignUp>;
+  startEmailLinkFlow: (params: StartEmailLinkFlowParams) => Promise<SignUpResource>;
   cancelEmailLinkFlow: () => void;
 };
 ```
@@ -160,3 +167,5 @@ In addition to the methods listed above, the `SignUp` class also has the followi
 
 *   [`prepareWeb3WalletVerification()`](/docs/references/javascript/sign-up/web3-verification#prepare-web3-wallet-verification)
 *   [`attemptWeb3WalletVerification()`](/docs/references/javascript/sign-up/web3-verification#attempt-web3-wallet-verification)
+
+[signup-ref]: /docs/references/javascript/sign-up/sign-up
