--- a/docs/integrations/SAML/azure.mdx
+++ b/docs/integrations/SAML/azure.mdx
@@ -32,6 +32,138 @@ Integrating Azure AD with Clerk allows you to use Azure AD as an identity provid
 
 <Steps>
 
-### Create a new application in Azure AD
+### Setup Clerk SAML Connection
+
+1. Create a new Enterprise Connection in the Clerk Dashboard. 
+
+2. Fill out the form with the details for your Azure AD application.
+
+<Images 
+  width={3024}
+  height={1652}
+  src="/docs/images/integrations/azure/azure-saml-clerk-create-connection.png"
+  alt="Steps to create a new Enterprise Connection in the Clerk Dashboard and fill out the form with the details for your Azure AD application"
+/>
+
+### Find the Azure Enterprise Applications 
+
+<Images 
+  width={3024}
+  height={1652}
+  src="/docs/images/integrations/azure/azure-ad-ent-applications-location.avif"
+  alt="Find the Azure Enterprise Applications in the Azure Portal"
+/>
+
+###  Create a new Azure Enterprise Application
+<Images 
+  width={3024}
+  height={1652}
+  src="/docs/images/integrations/azure/azure-new-app.avif"
+  alt="Create a new Azure Enterprise Application in the Azure Portal"
+/>
+
+###  Find Add User or Group & Assign
+Find the "Add User or Group" button and click it.
+<Images 
+  width={3024}
+  height={1652}
+  src="/docs/images/integrations/azure/find-add-user.avif"
+  alt="Pointing to find the 'Add User or Group' button and click it"
+/>
+
+#### Assign Selected User or Group
+1. 
+2. 
+3. 
+4.
+5.
+<Images 
+  width={3024}
+  height={1652}
+  src="/docs/images/integrations/azure/assign-user-to-app.avif"
+  alt="Steps to assign User or Group to the Enterprise Azure Application"
+/>
+
+### Find SSO Setup
+After you have assigned the user to the app, go to "Overview" in the left-hand menu.
+<Images
+  width={3024}
+  height={1652}
+  src="/docs/images/integrations/azure/find-sso-setup.avif"
+  alt="Pointing to find the SSO Setup in the Azure Portal in the Overview section"
+/>
+
+Choose the "SAML" option.
+
+### Basic SAML Configuration
+1. Find and click on the edit button for the Basic SAML Configuration.
+2. Copy the "Identifier (Entity ID)" from the Clerk Dashboard and paste it into this field.
+3. Copy the "Reply URL (Assertion Consumer Service URL)" from the Clerk Dashboard and paste them into this FileSystemDirectoryHandle.
+Once those fields are filled out, click "Save" at the top of the page.
+<Images width={3024} height={1652} src="/docs/images/integrations/azure/azure-basic-saml-configuration.avif" alt="Steps to configure the Basic SAML Configuration in the Azure Portal" />
+
+#### Clerk Reference for Basic SAML Configuration
+Step 2 for Indentifer (Entity ID) and Step 3 for Reply URL (Assertion Consumer Service URL) are the values you will need to copy from the Clerk Dashboard and paste into the Azure Portal.
+The numbers are directly related to Azure Portal's Basic SAML Configuration steps above. 
+<Images 
+  width={3024}
+  height={1652}
+  src="/docs/images/integrations/azure/clerk-side-azure-basic-saml-config.avif"
+  alt="Clerk Reference for Basic SAML Configuration in the Azure Portal"
+/>
+
+### Add Azure Federation Metadata URL to Clerk IDP Metadata
+
+Azure Federation Metadata URL location in the Azure Portal
+<Images 
+  width={3024}
+  height={1652}
+  src="/docs/images/integrations/azure/federation-url-azure-side.avif"
+  alt="Azure Federation Metadata URL location in the Azure Portal"
+/>
+
+Adding the Azure Federation Metadata URL to the Clerk IDP Metadata in Clerk Dashboard
+<Images
+  width={3024}
+  height={1652}
+  src="/docs/images/integrations/azure/federation-url-clerk-side.avif"
+  alt="Adding the Azure Federation Metadata URL to the Clerk IDP Metadata in Clerk Dashboard"
+/>
+
+### Mapping the Azure Claims to Clerk 
+
+Find the edit button for Claims "Attributes & Claims" in the Azure Portal.
+<Images 
+  width={3024}
+  height={1652}
+  src="/docs/images/integrations/azure/find-edit-attributes-claims.avif"
+  alt="Mapping the Azure Claims to Clerk in the Azure Portal"
+/>
+
+Click on the email claim to edit the field. 
+<Images 
+  width={3024}
+  height={1652}
+  src="/docs/images/integrations/azure/click-email-claim-to-edit.avif"
+  alt="Click on the email claim to edit the field in the Azure Portal"
+/>
+
+Update the email claim to "user.userprincipalname" and click "Save" at the top of the page.
+<Images 
+  width={3024}
+  height={1652}
+  src="/docs/images/integrations/azure/mail-to-user-userprinciplename.avif"
+  alt="Update the email claim to 'user.userprincipalname' and click 'Save' at the top of the page in the Azure Portal"
+/>
+
+### Enable the Connection in Clerk Dashboard
+
+After you have completed the steps in the Azure Portal, go back to the Clerk Dashboard and enable the connection.
+<Images 
+  width={3024}
+  height={1652}
+  src="/docs/images/integrations/azure/enable-connection-clerk.avif"
+  alt="Enable the connection in the Clerk Dashboard"
+/>
 
 </Steps>
