--- a/docs/references/javascript/user/password-management.mdx
+++ b/docs/references/javascript/user/password-management.mdx
@@ -45,14 +45,19 @@ function updatePassword: (params: UpdateUserPasswordParams) => Promise<User>;
         .addEventListener("click", async function () {
           const currentPassword = document.getElementById("current-password").value;
           const newPassword = document.getElementById("new-password").value;
-          try {
-            await clerk.user.updatePassword({
-              currentPassword,
-              newPassword,
-            });
-          } catch (err) {
-            console.error(err);
-          }
+          clerk.user.updatePassword({
+            currentPassword,
+            newPassword,
+          })
+          .then((response) => {
+            console.log(response);
+            console.log("Password updated successfully");
+          })
+          .catch((error) => {
+            document.getElementById("error").innerHTML =
+              error.errors[0].longMessage;
+            console.log("An error occurred:", error.errors);
+          });
         });
     } else {
       document.getElementById("app").innerHTML = `
@@ -88,6 +93,7 @@ function updatePassword: (params: UpdateUserPasswordParams) => Promise<User>;
           id="new-password"
           placeholder="New password"
         />
+        <p id="error"></p>
         <button id="update-password-button">Update password</button>
 
         <script type="module" src="/main.js"></script>
@@ -110,6 +116,7 @@ function updatePassword: (params: UpdateUserPasswordParams) => Promise<User>;
       id="new-password"
       placeholder="New password"
     />
+    <p id="error"></p>
     <button id="update-password-button">Update password</button>
 
     <script>
@@ -123,14 +130,19 @@ function updatePassword: (params: UpdateUserPasswordParams) => Promise<User>;
               const currentPassword =
                 document.getElementById("current-password").value;
               const newPassword = document.getElementById("new-password").value;
-              try {
-                await Clerk.user.updatePassword({
-                  currentPassword,
-                  newPassword,
-                });
-              } catch (err) {
-                console.error(err);
-              }
+              Clerk.user.updatePassword({
+                currentPassword,
+                newPassword,
+              })
+              .then((response) => {
+                console.log(response);
+                console.log("Password updated successfully");
+              })
+              .catch((error) => {
+                document.getElementById("error").innerHTML =
+                  error.errors[0].longMessage;
+                console.log("An error occurred:", error.errors);
+              });
             });
         } else {
           document.getElementById("app").innerHTML = `
@@ -182,8 +194,7 @@ function removePassword: (params: RemoveUserPasswordParams) => Promise<User>;
         .getElementById("remove-password-button")
         .addEventListener("click", async () => {
           const currentPassword = document.getElementById("current-password").value;
-          clerk.user
-            .removePassword({ currentPassword })
+          clerk.user.removePassword({ currentPassword })
             .then((response) => {
               console.log(response);
               console.log("Password removed successfully");
@@ -252,8 +263,7 @@ function removePassword: (params: RemoveUserPasswordParams) => Promise<User>;
             .addEventListener("click", async () => {
               const currentPassword =
                 document.getElementById("current-password").value;
-              Clerk.user
-                .removePassword({ currentPassword })
+              Clerk.user.removePassword({ currentPassword })
                 .then((response) => {
                   console.log(response);
                   console.log("Password removed successfully");
