add missing id='app' div

--- a/docs/references/javascript/user/password-management.mdx
+++ b/docs/references/javascript/user/password-management.mdx
@@ -105,6 +105,8 @@ function updatePassword: (params: UpdateUserPasswordParams) => Promise<User>;
 
   <Tab>
   ```html filename="index.html"
+    <div id="app"></div>
+
     <h1>Update password</h1>
     <input
       type="password"
@@ -245,6 +247,8 @@ function removePassword: (params: RemoveUserPasswordParams) => Promise<User>;
 
   <Tab>
   ```html filename="index.html"
+    <div id="app"></div>
+
     <input
       type="password"
       id="current-password"
