add missing script

--- a/docs/references/javascript/user/password-management.mdx
+++ b/docs/references/javascript/user/password-management.mdx
@@ -121,6 +121,14 @@ function updatePassword: (params: UpdateUserPasswordParams) => Promise<User>;
     <p id="error"></p>
     <button id="update-password-button">Update password</button>
 
+    <script
+      async
+      crossorigin="anonymous"
+      data-clerk-publishable-key='{{pub_key}}'
+      src="https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+      type="text/javascript"
+    ></script>
+
     <script>
       window.addEventListener("load", async function () {
         await Clerk.load();
@@ -256,6 +264,14 @@ function removePassword: (params: RemoveUserPasswordParams) => Promise<User>;
     />
     <p id="error"></p>
     <button id="remove-password-button">Remove Password</button>
+
+    <script
+      async
+      crossorigin="anonymous"
+      data-clerk-publishable-key='{{pub_key}}'
+      src="https://[your-domain].clerk.accounts.dev/npm/@clerk/clerk-js@latest/dist/clerk.browser.js"
+      type="text/javascript"
+    ></script>
 
     <script>
       window.addEventListener("load", async function () {
