Assign user steps added

--- a/docs/integrations/SAML/azure.mdx
+++ b/docs/integrations/SAML/azure.mdx
@@ -72,17 +72,12 @@ Find the "Add User or Group" button and click it.
 />
 
 #### Assign Selected User or Group
-1. 
-2. 
-3. 
-4.
-5.
-<Images 
-  width={3024}
-  height={1652}
-  src="/docs/images/integrations/azure/assign-user-to-app.avif"
-  alt="Steps to assign User or Group to the Enterprise Azure Application"
-/>
+1. Click on the "Users none selected" link.
+2. Enter in the search field the user or group you want to assign to the Enterprise Application.
+3. Click on the check box next to the user or group you want to assign.
+4. Click the "Select" button at the bottom of the page.
+5. Click the "Assign" button at the bottom of the page.
+<Images width={3024} height={1652} src="/docs/images/integrations/azure/assign-user-to-app.avif" alt="Steps to assign User or Group to the Enterprise Azure Application" />
 
 ### Find SSO Setup
 After you have assigned the user to the app, go to "Overview" in the left-hand menu.
