Added some descriptions, alts match

--- a/docs/integrations/SAML/azure.mdx
+++ b/docs/integrations/SAML/azure.mdx
@@ -47,6 +47,7 @@ Integrating Azure AD with Clerk allows you to use Azure AD as an identity provid
 
 ### Find the Azure Enterprise Applications 
 
+Find the Azure "Enterprise Applications" in the Azure Portal to navigate to create a new application.
 <Images 
   width={3024}
   height={1652}
@@ -55,6 +56,8 @@ Integrating Azure AD with Clerk allows you to use Azure AD as an identity provid
 />
 
 ###  Create a new Azure Enterprise Application
+
+Find and click on the "New Application" button to create a new Enterprise Application.
 <Images 
   width={3024}
   height={1652}
@@ -63,6 +66,7 @@ Integrating Azure AD with Clerk allows you to use Azure AD as an identity provid
 />
 
 ###  Find Add User or Group & Assign
+
 Find the "Add User or Group" button and click it.
 <Images 
   width={3024}
@@ -72,6 +76,7 @@ Find the "Add User or Group" button and click it.
 />
 
 #### Assign Selected User or Group
+
 1. Click on the "Users none selected" link.
 2. Enter in the search field the user or group you want to assign to the Enterprise Application.
 3. Click on the check box next to the user or group you want to assign.
@@ -80,6 +85,7 @@ Find the "Add User or Group" button and click it.
 <Images width={3024} height={1652} src="/docs/images/integrations/azure/assign-user-to-app.avif" alt="Steps to assign User or Group to the Enterprise Azure Application" />
 
 ### Find SSO Setup
+
 After you have assigned the user to the app, go to "Overview" in the left-hand menu.
 <Images
   width={3024}
