--- a/docs/custom-flows/email-sms-otp.mdx
+++ b/docs/custom-flows/email-sms-otp.mdx
@@ -34,7 +34,7 @@ To enable passwordless authentication, you need to configure your instance to al
 
 Passwordless authentication can be configured through the Clerk Dashboard. Go to **User & Authentication > [Email, Phone, and Username](https://dashboard.clerk.com/last-active?path=user-authentication/email-phone-username)**. In the **Authentication strategies** section of this page, choose one of the available passwordless authentication strategies that send one-time codes.
 
-For more information on how to configure passwordless authentication, check out the [Sign-in options](/docs/authentication/configuration/sign-in-options) guide.
+For more information on how to configure passwordless authentication, check out the [Sign-in and sign-up options](/docs/authentication/configuration/sign-in-sign-up-options#authentication-strategies) guide.
 
 ### Enable passwordless authentication using the Clerk API
 
@@ -84,7 +84,7 @@ Let's see the above in action. If you want to learn more about sign-ups, check o
             phoneNumber: phone,
           });
 
-          // Start the verification - a SMS message will be sent to the 
+          // Start the verification - a SMS message will be sent to the
           // number with a one-time code
           await signUp.preparePhoneNumberVerification();
 
@@ -118,7 +118,7 @@ Let's see the above in action. If you want to learn more about sign-ups, check o
           if (completeSignUp.status === 'complete') {
             await setActive({ session: completeSignUp.createdSessionId });
 
-            // redirect user 
+            // redirect user
             router.push("/")
           }
         }
@@ -156,7 +156,7 @@ Let's see the above in action. If you want to learn more about sign-ups, check o
 
   function SignUpPage() {
       const { signUp,setActive } = useSignUp();
-      
+
       async function onClick(e) {
           e.preventDefault();
           // Kick off the sign-up process, passing the user's
@@ -164,21 +164,21 @@ Let's see the above in action. If you want to learn more about sign-ups, check o
           await signUp.create({
               phoneNumber: "+11111111111",
           });
-          
-          // Prepare phone number verification. An SMS message 
-          // will be sent to the user with a one-time 
+
+          // Prepare phone number verification. An SMS message
+          // will be sent to the user with a one-time
           // verification code.
           await signUp.preparePhoneNumberVerification();
-          
-          // Attempt to verify the user's phone number by 
+
+          // Attempt to verify the user's phone number by
           // providing the one-time code they received.
           await signUp.attemptPhoneNumberVerification({
               code: "123456",
-          }); 
-          
+          });
+
           await setActive({session: signUp.createdSessionId});
       }
-      
+
       return (
           <button onClick={onClick}>
               Sign up without password
@@ -192,14 +192,14 @@ Let's see the above in action. If you want to learn more about sign-ups, check o
   ```js filename="SignUpPage.js"
   const { client } = window.Clerk;
 
-  // Kick off the sign-up process, 
+  // Kick off the sign-up process,
   // passing the user's phone number.
   const signUp = await client.signUp.create({
       phoneNumber: "+11111111111",
   });
 
-  // Prepare phone number verification. An SMS will 
-  // be sent to the user with a one-time verification 
+  // Prepare phone number verification. An SMS will
+  // be sent to the user with a one-time verification
   // code.
   await signUp.preparePhoneNumberVerification();
 
@@ -212,7 +212,7 @@ Let's see the above in action. If you want to learn more about sign-ups, check o
   </Tab>
 </Tabs>
 
-You can also verify your users via their email address. There's two additional helper methods: [`prepareEmailAddressVerification`](/docs/references/javascript/sign-up/email-verification#prepare-email-address-verification) and [`attemptEmailAddressVerification`](/docs/references/javascript/sign-up/email-verification#attempt-email-address-verification) that work the same way as their phone number counterparts do. You can find all available methods in the [`SignUp`](/docs/references/javascript/sign-in/sign-in) object documentation. 
+You can also verify your users via their email address. There's two additional helper methods: [`prepareEmailAddressVerification`](/docs/references/javascript/sign-up/email-verification#prepare-email-address-verification) and [`attemptEmailAddressVerification`](/docs/references/javascript/sign-up/email-verification#attempt-email-address-verification) that work the same way as their phone number counterparts do. You can find all available methods in the [`SignUp`](/docs/references/javascript/sign-in/sign-in) object documentation.
 
 #### Sign in using a custom flow (Clerk API)
 
@@ -305,7 +305,7 @@ Let's see the above in action. If you want to learn more about sign-ins, check o
             if (completeSignIn.status === 'complete') {
               await setActive({ session: completeSignIn.createdSessionId });
 
-              // Redirect user 
+              // Redirect user
               router.push("/")
             }
           }
@@ -343,27 +343,27 @@ Let's see the above in action. If you want to learn more about sign-ins, check o
 
     function SignInPage() {
         const { signIn,setActive } = useSignIn();
-        
+
         async function onClick(e) {
             e.preventDefault();
-            // Kick off the sign-in process, passing the user's 
+            // Kick off the sign-in process, passing the user's
             // authentication identifier. In this case it's their
             // phone number.
-            const { supportedFirstFactors } = await signIn.create({ 
+            const { supportedFirstFactors } = await signIn.create({
                 identifier: "+11111111111",
             });
-            
+
             // Find the phoneNumberId from all the available first factors for the current sign in
             const firstPhoneFactor = supportedFirstFactors.find(factor => {
               return factor.strategy === 'phone_code'
             });
-            
+
             const { phoneNumberId } = firstPhoneFactor;
 
-            // Prepare first factor verification, specifying 
+            // Prepare first factor verification, specifying
             // the phone code strategy.
-            await signIn.prepareFirstFactor({ 
-                strategy: "phone_code", 
+            await signIn.prepareFirstFactor({
+                strategy: "phone_code",
                 phoneNumberId,
             });
 
@@ -373,10 +373,10 @@ Let's see the above in action. If you want to learn more about sign-ins, check o
                 strategy: "phone_code",
                 code: "123456",
             });
-            
+
             await setActive({session: signIn.createdSessionId});
         }
-        
+
         return (
             <button onClick={onClick}>
                 Sign in without password
@@ -389,10 +389,10 @@ Let's see the above in action. If you want to learn more about sign-ins, check o
   <Tab>
     ```js filename="SignInPage.js"
     const { client } = window.Clerk;
-    // Kick off the sign-in process, passing the user's 
+    // Kick off the sign-in process, passing the user's
     // authentication identifier. In this case it's their
     // phone number.
-    const { supportedFirstFactors } = await client.signIn.create({ 
+    const { supportedFirstFactors } = await client.signIn.create({
         identifier: "+11111111111",
     });
 
@@ -400,13 +400,13 @@ Let's see the above in action. If you want to learn more about sign-ins, check o
     const firstPhoneFactor = supportedFirstFactors.find(factor => {
       return factor.strategy === 'phone_code'
     });
-            
+
     const { phoneNumberId } = firstPhoneFactor;
 
-    // Prepare first factor verification, specifying 
+    // Prepare first factor verification, specifying
     // the phone code strategy.
-    await signIn.prepareFirstFactor({ 
-        strategy: "phone_code", 
+    await signIn.prepareFirstFactor({
+        strategy: "phone_code",
         phoneNumberId,
     });
 
