--- a/docs/custom-flows/overview.mdx
+++ b/docs/custom-flows/overview.mdx
@@ -52,7 +52,7 @@ The first step a user needs to make is to identify what account they'd like to s
 
 ### Factor one verification
 
-Once a user is identified, they need to prove their identity. This is the process of "authenticating" the user. There's a number of strategies a user can use to perform authentication with the most basic being the humble password. Other authentication strategies, like passwordless sign-in, can be explored in the [sign-in options documentation](/docs/authentication/configuration/sign-in-options).
+Once a user is identified, they need to prove their identity. This is the process of "authenticating" the user. There's a number of strategies a user can use to perform authentication with the most basic being the humble password. Other authentication strategies, like passwordless sign-in, can be explored in the [sign-in and sign-up options](/docs/authentication/configuration/sign-in-sign-up-options#authentication-strategies) guide.
 
 ### Factor two verification (optional)
 
