--- a/docs/users/web3.mdx
+++ b/docs/users/web3.mdx
@@ -9,7 +9,7 @@ Learn how to use Clerk to quickly and easily add secure authentication and user 
 
 ## Before you start
 
-You need to create a Clerk application in your [Clerk Dashboard](https://dashboard.clerk.com/) and configure the application to use **Sign in with Metamask**. For more information on how to set up a Clerk application, check out the [setup guide](/docs/quickstarts/setup-clerk). To enable Metamask authentication, check out [this guide](/docs/authentication/configuration/sign-in-options#social-o-auth-web3).
+You need to create a Clerk application in your [Clerk Dashboard](https://dashboard.clerk.com/) and configure the application to use **Sign in with Metamask**. For more information on how to set up a Clerk application, check out the [setup guide](/docs/quickstarts/setup-clerk). To enable Metamask authentication, check out [this guide](/docs/authentication/configuration/sign-in-sign-up-options#web3-authentication).
 
 Please ensure that you have downloaded the [Metamask plugin](https://metamask.io/download/) and installed it on your browser to ensure a seamless sign-in flow.
 
@@ -19,7 +19,7 @@ Once you have a Clerk application set up in the dashboard, it's time to create a
 
 ## Accessing the Web3 address from the frontend
 
-At this point, you should have a Next.js application integrated with Clerk and with Metamask authentication enabled. Run `npm run dev` and visit `localhost:3000`. If you followed the guide, all of the pages to your application should be protected, and you should see your sign-in page. 
+At this point, you should have a Next.js application integrated with Clerk and with Metamask authentication enabled. Run `npm run dev` and visit `localhost:3000`. If you followed the guide, all of the pages to your application should be protected, and you should see your sign-in page.
 
 After signing in with Metamask, you'll be presented with the Next.js default start screen. Let's modify the start screen to display a user's primary Web3 address on the page.
 
