SAML directory for images

--- a/docs/integrations/SAML/okta.mdx
+++ b/docs/integrations/SAML/okta.mdx
@@ -18,14 +18,92 @@ description: Learn how to integrate .
   ]}
 >
 
-- Use Okta SAML to authenticate users in your Clerk application.
+- Use Okta as an identity provider for your Clerk application to authenticate users and manage their access to your application.
 
 </TutorialHero>
 
-Integrating Okta SAML with Clerk process involves setting up a SAML application in Okta and configuring the SAML settings in Clerk. This tutorial will guide you through the process of setting up Okta SAML and integrating it with Clerk.
+Integrating Okta with Clerk allows you to use Okta as an identity provider for your Clerk application. This means that you can use Okta to authenticate users and manage their access to your application.
 
 ## Tutorial
 
 <Callout type="info">
   You must have a local project with Clerk set up already to follow this tutorial. See [the quickstart docs](/docs/quickstarts/overview) to get started.
 </Callout>
+
+<Steps>
+
+### Setup Clerk SAML Connection
+
+<Images 
+  width={3024}
+  height={1652}
+  src="/docs/images/integrations/saml/okta/create-enterprise-connection-clerk-dash"
+  alt=""
+/>
+
+### Find the Azure Enterprise Applications 
+
+
+<Images 
+  width={3024}
+  height={1652}
+  src="/docs/images/integrations/saml/okta"
+  alt=""
+/>
+
+###  Create a new Azure Enterprise Application
+
+
+<Images 
+  width={3024}
+  height={1652}
+  src="/docs/images/integrations/saml/okta"
+  alt=""
+/>
+
+###  Find Add User or Group & Assign
+
+<Images 
+  width={3024}
+  height={1652}
+  src="/docs/images/integrations/saml/okta"
+  alt=""
+/>
+
+#### Assign Selected User or Group
+
+<Images width={3024} height={1652} src="/docs/images/integrations/saml/okta" alt="" />
+
+### Find SSO Setup
+
+<Images
+  width={3024}
+  height={1652}
+  src="/docs/images/integrations/saml/okta"
+  alt=""
+/>
+
+
+### Basic SAML Configuration
+
+<Images width={3024} height={1652} src="/docs/images/integrations/saml/okta" alt="" />
+
+#### Clerk Reference for Basic SAML Configuration
+
+<Images 
+  width={3024}
+  height={1652}
+  src="/docs/images/integrations/saml/okta"
+  alt=""
+/>
+
+### Enable the Connection in Clerk Dashboard
+
+<Images 
+  width={3024}
+  height={1652}
+  src="/docs/images/integrations/saml/okta"
+  alt="Enable the connection in the Clerk Dashboard"
+/>
+
+</Steps>
